--- a/index.html
+++ b/index.html
@@ -182,7 +182,12 @@
                     <div class="slider-main__image ibg">
                       <img src="./img/bg-two.jpeg" alt="img" />
                     </div>
-                    <a href="#" class="slider-main__content">
+                    <a
+                      href="#"
+                      data-swiper-parallax-opacity="0"
+                      data-swiper-parallax-x="-100%"
+                      class="slider-main__content"
+                    >
                       <div class="slider-main__title">Sofa</div>
                       <div class="slider-main__text">
                         luxury big sofa 2-seat
@@ -201,7 +206,12 @@
                     <div class="slider-main__image ibg">
                       <img src="./img/bg.jpg" alt="img" />
                     </div>
-                    <a href="#" class="slider-main__content">
+                    <a
+                      href="#"
+                      data-swiper-parallax-opacity="0"
+                      data-swiper-parallax-x="-100%"
+                      class="slider-main__content"
+                    >
                       <div class="slider-main__title">Sofa-two</div>
                       <div class="slider-main__text">luxury sofa</div>
                       <div class="slider-main__price">
@@ -218,7 +228,12 @@
                     <div class="slider-main__image ibg">
                       <img src="./img/bg-three.jpeg" alt="img" />
                     </div>
-                    <a href="#" class="slider-main__content">
+                    <a
+                      href="#"
+                      data-swiper-parallax-opacity="0"
+                      data-swiper-parallax-x="-100%"
+                      class="slider-main__content"
+                    >
                       <div class="slider-main__title">Sofa-three</div>
                       <div class="slider-main__text">sofa</div>
                       <div class="slider-main__price">
@@ -233,6 +248,38 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </section>
+        <section class="page__advantages advantages">
+          <div class="advantages__container container">
+            <div class="advantages__item">
+              <div class="advantages__icon">
+                <img src="img/bigwinner.svg" alt="img" />
+              </div>
+              <h3 class="advantages__title">High Quality</h3>
+              <div class="advantages__text">crafted from top materials</div>
+            </div>
+            <div class="advantages__item">
+              <div class="advantages__icon">
+                <img src="img/check.svg" alt="img" />
+              </div>
+              <h3 class="advantages__title">Warrany Protection</h3>
+              <div class="advantages__text">Over 2 years</div>
+            </div>
+            <div class="advantages__item">
+              <div class="advantages__icon">
+                <img src="img/wallet.svg" alt="img" />
+              </div>
+              <h3 class="advantages__title">Free Shopping</h3>
+              <div class="advantages__text">Order over 150$</div>
+            </div>
+            <div class="advantages__item">
+              <div class="advantages__icon">
+                <img src="img/support.svg" alt="img" />
+              </div>
+              <h3 class="advantages__title">24/7 support</h3>
+              <div class="advantages__text">dedicated support</div>
             </div>
           </div>
         </section>
