--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+
     <title>Shop</title>
   </head>
   <body>
@@ -283,6 +284,196 @@
             </div>
           </div>
         </section>
+        <section class="page__products products">
+          <div class="products__container container">
+            <h2 class="products__title _title">One product</h2>
+            <div class="products__items">
+              <article data-pid="1" class="products__item item-product">
+                <div class="item-product__labels">
+                  <div class="item-product__label item-product__label_sale">
+                    -30%
+                  </div>
+                  <!-- <div class="item-product__label item-product__label_new">
+                    New
+                  </div> -->
+                </div>
+                <a href="#" class="item-product__image">
+                  <img class="product__img" src="img/1.jpg" alt="product" />
+                </a>
+                <div class="item-product__body">
+                  <div class="item-product__content">
+                    <h5 class="item-product__title">Chair</h5>
+                    <div class="item-product__text">Stylish cafe chair</div>
+                  </div>
+                  <div class="item-product__prices">
+                    <div class="item-product__price">Rp 2.500.000</div>
+                    <div class="item-product__price_old">Rp 3.500.000</div>
+                  </div>
+                  <div class="item-product__actions actions-product">
+                    <div class="actions-product__body">
+                      <a href="#" class="actions-product__button btn btn_white"
+                        >Add to cart</a
+                      >
+                      <a href="#" class="actions-product__link">
+                        <img
+                          class="action__img"
+                          src="img/share.svg"
+                          alt="share"
+                        />
+                        Share
+                      </a>
+                      <a href="#" class="actions-product__link">
+                        <img
+                          class="action__img"
+                          src="img/like.svg"
+                          alt="like"
+                        />
+                        Like
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+              <article data-pid="2" class="products__item item-product">
+                <div class="item-product__labels">
+                  <div class="item-product__label item-product__label_new">
+                    New
+                  </div>
+                </div>
+                <a href="#" class="item-product__image">
+                  <img class="product__img" src="img/2.webp" alt="product" />
+                </a>
+                <div class="item-product__body">
+                  <div class="item-product__content">
+                    <h5 class="item-product__title">Sofa</h5>
+                    <div class="item-product__text">soft sofa</div>
+                  </div>
+                  <div class="item-product__prices">
+                    <div class="item-product__price">Rp 4.500.000</div>
+                    <div class="item-product__price_old">Rp 5.500.000</div>
+                  </div>
+                  <div class="item-product__actions actions-product">
+                    <div class="actions-product__body">
+                      <a href="#" class="actions-product__button btn btn_white"
+                        >Add to cart</a
+                      >
+                      <a href="#" class="actions-product__link">
+                        <img
+                          class="action__img"
+                          src="img/share.svg"
+                          alt="share"
+                        />
+                        Share
+                      </a>
+                      <a href="#" class="actions-product__link">
+                        <img
+                          class="action__img"
+                          src="img/like.svg"
+                          alt="like"
+                        />
+                        Like
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+              <article data-pid="3" class="products__item item-product">
+                <div class="item-product__labels">
+                  <div class="item-product__label item-product__label_sale">
+                    -10%
+                  </div>
+                  <div class="item-product__label item-product__label_new">
+                    New
+                  </div>
+                </div>
+                <a href="#" class="item-product__image">
+                  <img class="product__img" src="img/3.jpg" alt="product" />
+                </a>
+                <div class="item-product__body">
+                  <div class="item-product__content">
+                    <h5 class="item-product__title">Armchair</h5>
+                    <div class="item-product__text">For relax</div>
+                  </div>
+                  <div class="item-product__prices">
+                    <div class="item-product__price">Rp 3.000.000</div>
+                  </div>
+                  <div class="item-product__actions actions-product">
+                    <div class="actions-product__body">
+                      <a href="#" class="actions-product__button btn btn_white"
+                        >Add to cart</a
+                      >
+                      <a href="#" class="actions-product__link">
+                        <img
+                          class="action__img"
+                          src="img/share.svg"
+                          alt="share"
+                        />
+                        Share
+                      </a>
+                      <a href="#" class="actions-product__link">
+                        <img
+                          class="action__img"
+                          src="img/like.svg"
+                          alt="like"
+                        />
+                        Like
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+              <article data-pid="4" class="products__item item-product">
+                <div class="item-product__labels">
+                  <!-- <div class="item-product__label item-product__label_sale">
+                    -20%
+                  </div> -->
+                  <!-- <div class="item-product__label item-product__label_new">
+                    New
+                  </div> -->
+                </div>
+                <a href="#" class="item-product__image">
+                  <img class="product__img" src="img/4.jpg" alt="product" />
+                </a>
+                <div class="item-product__body">
+                  <div class="item-product__content">
+                    <h5 class="item-product__title">Table</h5>
+                    <div class="item-product__text">Dinner table</div>
+                  </div>
+                  <div class="item-product__prices">
+                    <div class="item-product__price">Rp 3.500.000</div>
+                    <div class="item-product__price_old">Rp 5.500.000</div>
+                  </div>
+                  <div class="item-product__actions actions-product">
+                    <div class="actions-product__body">
+                      <a href="#" class="actions-product__button btn btn_white"
+                        >Add to cart</a
+                      >
+                      <a href="#" class="actions-product__link">
+                        <img
+                          class="action__img"
+                          src="img/share.svg"
+                          alt="share"
+                        />
+                        Share
+                      </a>
+                      <a href="#" class="actions-product__link">
+                        <img
+                          class="action__img"
+                          src="img/like.svg"
+                          alt="like"
+                        />
+                        Like
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+            </div>
+            <div class="products__footer">
+              <a href="#" class="products__more btn btn_white">Show More</a>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="footer__container container">
@@ -393,6 +584,7 @@
         </div>
       </footer>
     </div>
+
     <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./js/sliders.js"></script>
