--- a/index.html
+++ b/index.html
@@ -775,9 +775,9 @@
       </div> -->
       <!--popup-->
     </div>
-    <script src="/js/sliders.js"></script>
-    <script src="/js/spoiler.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/time.js"></script>
+    <script src="js/sliders.js"></script>
+    <script src="js/spoiler.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/time.js"></script>
   </body>
 </html>
