--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 /></a>
                 <div class="header__menu menu">
                   <nav class="menu__body">
-                    <ul data-spollers="768,max" class="menu__list">
+                    <ul data-spoilers="768,max" class="menu__list">
                       <li class="menu__item">
                         <a href="#" class="menu__link">Products</a>
-                        <button class="menu__arrow" data-spoller type="submit">
+                        <button class="menu__arrow" data-spoiler type="submit">
                           <img src="./img/downarrow.svg" alt="arrow-down" />
                         </button>
                         <ul class="menu__sub-list">
@@ -52,7 +52,7 @@
                       </li>
                       <li class="menu__item">
                         <a href="#" class="menu__link">Rooms</a>
-                        <button class="menu__arrow" data-spoller type="submit">
+                        <button class="menu__arrow" data-spoiler type="submit">
                           <img src="./img/downarrow.svg" alt="arrow-down" />
                         </button>
                         <ul class="menu__sub-list">
@@ -669,11 +669,11 @@
                 <a href="#" class="contacts-footer__item">www.chair.com</a>
               </div>
             </div>
-            <div class="footer__menu menu-footer" data-spollers="768,max">
+            <div class="footer__menu menu-footer" data-spoilers="768,max">
               <div class="menu-footer__column">
                 <button
                   type="button"
-                  data-spoller
+                  data-spoiler
                   class="menu-footer__title _footer-title"
                 >
                   Clients
@@ -690,7 +690,7 @@
               <div class="menu-footer__column">
                 <button
                   type="button"
-                  data-spoller
+                  data-spoiler
                   class="menu-footer__title _footer-title"
                 >
                   Company
@@ -707,7 +707,7 @@
               <div class="menu-footer__column">
                 <button
                   type="button"
-                  data-spoller
+                  data-spoiler
                   class="menu-footer__title _footer-title"
                 >
                   Social Media
